se agrego el modulo de revision

--- a/src/app/components/admin/adminUnidad.component.html
+++ b/src/app/components/admin/adminUnidad.component.html
@@ -1,69 +1,65 @@
-<div class="row">
-    <h3>{{ title }}</h3><hr>
-</div><br>
-<div class="row">
-    <div class="col-md-12">
-        <form #registrarUnidad="ngForm" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="exampleInputEmail1"><strong>{{ title }}</strong></label>
-                <input type="text" name="nombreUnidad" #nombreUnidad="ngModel" [(ngModel)]="unidad.nombre" class="form-control" placeholder="Nombre unidad">
-                <small class="form-text text-muted">Nombre perteniente a la unidad.</small>
-                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1"><strong>Descripción de Unidad.</strong></label>
-                <input type="text" name="descripcionUnidad" #descripcionUnidad="ngModel" [(ngModel)]="unidad.descripcion" class="form-control" placeholder="Descripción unidad">
-                <small class="form-text text-muted">Descripción perteneciente a la unidad.</small>
-                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
-            </div>
-            <div class="form-group">
-                <label for="file"><strong>Imagen de Unidad.</strong></label><br>
-                <!--<input type="file" (change)="subeImg($event)" class="form-control-file" #fileInput accept=".xml" multiple="true">-->
-                <input type="file" class="form-control" (change)="fileChange($event)" name="imagenUnidad" #imagenUnidad="ngModel" [(ngModel)]="unidad.imagen" placeholder="Upload file">
-                <small class="form-text text-muted">Imagen perteneciente a la unidad.</small>
-            </div>
-            <div class="form-group">
-                <label for="file"><strong>Suscripción.</strong></label><br>
-                <!--<select name="cars" class="form-control" name="suscripcionUnidad" #suscripcionUnidad="ngModel" [(ngModel)]="unidad.suscripcion"  placeholder="Suscripcion">
-                    <option [value]="i" [attr.selected]="i===0" *ngFor="let suscripcion of suscripciones;let i = index">{{ suscripcion }}</option>
-                </select>-->
-                <select name="gender" class="form-control" [(ngModel)]="unidad.suscripcion">
-                    <option [value]="'0'" selected>Gratis</option>
-                    <option [value]="'1'">Anual</option>
-                    <option [value]="'2'">Intensivo</option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Crear unidad</button>
-        </form>
+<nav-p [identity]="identity"></nav-p>
+<div class="container" id="header">
+    <div class="row">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
+                <ol class="breadcrumb primary-color" style="    margin-right: 15px;
+                padding: 10px;
+                margin-bottom: 0;">
+                <li style="margin-left: 20px;"class="breadcrumb-item"><strong>{{ title }}</strong></li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron"> 
+                <div class="col-md-12">
+                    <nav-p-admin></nav-p-admin>
+                </div>
+                <div class="col-md-12">
+                    <br>
+                    <h3>{{ title }}</h3>  
+                    <hr>        
+                </div>
+                <div class="col-md-12">
+                    <form #registrarUnidad="ngForm" (ngSubmit)="onSubmit()">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="exampleInputEmail1"><strong>{{ title }}</strong></label>
+                                <input type="text" name="nombreUnidad" #nombreUnidad="ngModel" [(ngModel)]="unidad.nombre" class="form-control" placeholder="Nombre unidad">
+                                <small class="form-text text-muted">Nombre perteniente a la unidad.</small>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="exampleInputEmail1"><strong>Descripción de Unidad.</strong></label>
+                                <input type="text" name="descripcionUnidad" #descripcionUnidad="ngModel" [(ngModel)]="unidad.descripcion" class="form-control" placeholder="Descripción unidad">
+                                <small class="form-text text-muted">Descripción perteneciente a la unidad.</small>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="file"><strong>Imagen de Unidad.</strong></label>
+                                <!--<input type="file" (change)="subeImg($event)" class="form-control-file" #fileInput accept=".xml" multiple="true">-->
+                                <input type="file" class="form-control" (change)="fileChange($event)" name="imagenUnidad" #imagenUnidad="ngModel" [(ngModel)]="unidad.imagen" placeholder="Upload file">
+                                <small class="form-text text-muted">Imagen perteneciente a la unidad.</small>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="file"><strong>Suscripción.</strong></label>
+                                <select name="gender" class="form-control" [(ngModel)]="unidad.suscripcion">
+                                    <option [value]="'0'" selected>Gratis</option>
+                                    <option [value]="'1'">Anual</option>
+                                    <option [value]="'2'">Intensivo</option>
+                                </select>
+                                <small class="form-text text-muted">Plan perteneciente.</small>
+                            </div>
+                            <div class="form-group col-md-2 align-self-end text-center">
+                                <button type="submit" class="btn btn-primary">Crear unidad</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div><!-- jumbotron -->
+            </div><!-- col-md-12-->
+        </div>
     </div>
 </div>
-<!--
-<br><hr>
-<div class="row">
-    <div class="col-md-12">
-        <h3>Unidades creadas:</h3>
-        <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">Accion</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let unidad of unidades">
-                    <th scope="row">1</th>
-                    <td>{{ unidad.nombre }}</td>
-                    <td>{{ unidad.descripcion }}</td>
-                    <td></td>
-                  </tr>
-
-                </tbody>
-              </table>
-
-
-
-    </div>
-</div>
--->
