--- a/src/app/components/nav-p/nav-p.component.html
+++ b/src/app/components/nav-p/nav-p.component.html
@@ -29,11 +29,11 @@
                         <i class="fas fa-video"></i> Videos
                     </a>   
                 </li>
-                <!--<li class="nav-item">
+                <li class="nav-item">
                     <a [routerLink]="['/revision']" routerLinkActive="active" class="nav-link">
                         <i class="fas fa-clipboard"></i> Revisión
                     </a>   
-                </li>-->
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto" *ngIf="identity != null" style="margin-right: 10%;">
                 <!--<li class="nav-item">
