--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,72 +1,115 @@
 <nav-p [identity]="identity"></nav-p>
-
-
-<div class="container" id="header">    <div class="row"><div class="col-md-12">
-  
-        <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
-            <ol class="breadcrumb primary-color" style="    margin-right: 15px;
-            padding: 10px;
-            margin-bottom: 0;">
-              <li style="margin-left: 20px;"class="breadcrumb-item"><strong>{{ title }}</strong></li>
-            </ol>
-        </nav>
-        </div></div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="jumbotron">            
-                    
-                  
-                    <div class="row">
-                        <div class="col-md-12"><h3>{{ title }}</h3>  
-                            <hr>
-                        </div>
-                        
-                        <div class="col-md-12">
-                                <div class="row">
-                                        <div class="col-4">
-                                          <div class="list-group" id="list-tab" role="tablist">
-                                            <a class="list-group-item list-group-item-action active" id="list-unidad-list" data-toggle="list" href="#list-unidad" role="tab" aria-controls="home">Unidades</a>
-                                            <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Capitulos</a>
-                                            <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Videos</a>
-                                            <!--<a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Activar usuarios</a>-->
-                                          </div>
-                                        </div>
-                                        <div class="col-8">
-                                          <div class="tab-content" id="nav-tabContent">
-                                            <div class="tab-pane fade show active" id="list-unidad" role="tabpanel" aria-labelledby="list-unidad-list">
-                                                <app-admin-unidad></app-admin-unidad>
-                                            </div>
-                                            <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-                                                <app-admin-capitulo></app-admin-capitulo>
-                                            </div>
-                                            <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
-                                                <app-admin-video></app-admin-video>
-                                            </div>
-                                            <!--<div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>-->
-                                          </div>
-                                        </div>
-                                      </div>
-                            </div>
-
-
-                    </div>
-                 
-                      
-                            <!--<div class="identity-alert alert alert-success" *ngIf="identity && identity.sub">
-                                !Te has identificado correctamente! Bienvenido {{ identity.email }}
-                            </div>
-                        
-                            <div class="identity-alert alert alert-danger" *ngIf="identity && identity.data">
-                                !No te has identificado correctamente! 
-                            </div>-->
-                        
+<div class="container" id="header">
+    <div class="row">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
+                <ol class="breadcrumb primary-color" style="    margin-right: 15px;
+                padding: 10px;
+                margin-bottom: 0;">
+                <li style="margin-left: 20px;"class="breadcrumb-item"><strong>{{ title }}</strong></li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron"> 
+                <div class="col-md-12">
+                    <nav-p-admin></nav-p-admin>
                 </div>
-            </div>
+                <div class="col-md-12">
+                    <br>
+                    <h3>{{ title }}</h3>  
+                    <hr>        
+                </div>
+                <div class="col-md-12">
+                    <form #registrarCapitulo="ngForm" (ngSubmit)="onSubmit()">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="exampleInputEmail1"><strong>Nombre del video.</strong></label>
+                                <input type="text" name="nombreVideo" #nombreVideo="ngModel" [(ngModel)]="video.nombre" class="form-control" placeholder="Nombre video">
+                                <small class="form-text text-muted">Nombre perteniente al video.</small>
+                                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="exampleInputEmail1"><strong>Descripción del video.</strong></label>
+                                <input type="text" name="descripcionVideo" #descripcionVideo="ngModel" [(ngModel)]="video.descripcion" class="form-control" placeholder="Descripción video">
+                                <small class="form-text text-muted">Descripción perteneciente al video.</small>
+                                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="exampleInputEmail1"><strong>URL del video.</strong></label>
+                                <input type="text" name="urlVideo" #urlVideo="ngModel" [(ngModel)]="video.url" class="form-control" placeholder="URL video">
+                                <small class="form-text text-muted">URL perteneciente al video.</small>
+                                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label><strong>Unidad perteneciente.</strong></label>
+                                <select class="form-control" (change)="getCapChange($event.target.value)" name="cars" name="unidadVideo" #unidadVideo="ngModel" [(ngModel)]="video.unidad"  placeholder="Unidad video">
+                                    <option value="">Seleccione Unidad</option>
+                                    <option value="{{ unidad.id }}" *ngFor="let unidad of unidades">
+                                        {{ unidad.nombre }}
+                                    </option>
+                                </select>
+                                <small class="form-text text-muted">Unidad perteneciente.</small>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label><strong>Capitulo perteneciente.</strong></label><br>
+                                        
+                                <select name="cars" [disabled]="disableCap"  name="capituloVideo" class="form-control" #capituloVideo="ngModel" [(ngModel)]="video.capitulo"  placeholder="Unidad video">
+                                    <option value="">Seleccione Capitulo</option>
+                                    <option value="{{ capitulo.id }}" *ngFor="let capitulo of capitulos">
+                                        {{ capitulo.nombre }}
+                                    </option>
+                                </select>
+                                <small class="form-text text-muted">Capitulo perteneciente.</small>
+                                        <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="file"><strong>Suscripción.</strong></label><br>
+                                <select name="gender" class="form-control" [(ngModel)]="video.suscripcion">
+                                    <option [value]="'0'" selected>Gratis</option>
+                                    <option [value]="'1'">Anual</option>
+                                    <option [value]="'2'">Intensivo</option>
+                                </select>
+                                <small class="form-text text-muted">Plan perteneciente.</small>
+                            </div>
+                            <div class="form-group col-md-2 align-self-end text-center">
+                                <button type="submit" class="btn btn-primary">Crear video</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div><!-- jumbotron -->
+            </div><!-- col-md-12-->
+        </div>
     </div>
-      
-        <!--<div class="row"> 
-            <div class="col-lg-12"> 
-         
-            </div>
-        </div>-->
-    </div>
+</div>
+
+
+                        <!--<div class="col-4">
+                            <div class="list-group" id="list-tab" role="tablist">
+                            <a class="list-group-item list-group-item-action active" id="list-unidad-list" data-toggle="list" href="#list-unidad" role="tab" aria-controls="home">Unidades</a>
+                            <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Capitulos</a>
+                            <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Videos</a>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="tab-content" id="nav-tabContent">
+                            <div class="tab-pane fade show active" id="list-unidad" role="tabpanel" aria-labelledby="list-unidad-list">
+                                <app-admin-unidad></app-admin-unidad>
+                            </div>
+                            <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                                <app-admin-capitulo></app-admin-capitulo>
+                            </div>
+                            <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                                <app-admin-video></app-admin-video>
+                            </div>
+
+                            </div>
+                        </div>
+                    </div>-->
