--- a/src/app/components/admin/adminCapitulo.component.html
+++ b/src/app/components/admin/adminCapitulo.component.html
@@ -1,76 +1,106 @@
-<div class="row">
-    <h3>{{ title }}</h3><hr>
-</div><br>
-<div class="row">
-    <div class="col-md-12">
-        <form #registrarCapitulo="ngForm" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="exampleInputEmail1"><strong>Nombre del capitulo.</strong></label>
-                <input type="text" name="nombreCapitulo" #nombreCapitulo="ngModel" [(ngModel)]="capitulo.nombre" class="form-control" placeholder="Nombre capitulo">
-                <small class="form-text text-muted">Nombre perteniente al capitulo.</small>
-                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+<nav-p [identity]="identity"></nav-p>
+<div class="container" id="header">
+    <div class="row">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb" style="margin-bottom: 10px;">
+                <ol class="breadcrumb primary-color" style="    margin-right: 15px;
+                padding: 10px;
+                margin-bottom: 0;">
+                <li style="margin-left: 20px;"class="breadcrumb-item"><strong>{{ title }}</strong></li>
+                </ol>
+            </nav>
+        </div>
+    </div> 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron">
+                <div class="col-md-12">
+                    <nav-p-admin></nav-p-admin>
+                </div>
+                <div class="col-md-12">
+                    <br>
+                    <h3>{{ title }}</h3>  
+                    <hr>        
+                </div>
+                <div class="col-md-12">
+                    <form #registrarCapitulo="ngForm" (ngSubmit)="onSubmit()">
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="exampleInputEmail1"><strong>Nombre del capitulo.</strong></label>
+                                <input type="text" name="nombreCapitulo" #nombreCapitulo="ngModel" [(ngModel)]="capitulo.nombre" class="form-control" placeholder="Nombre capitulo">
+                                <small class="form-text text-muted">Nombre perteniente al capitulo.</small>
+                                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="exampleInputEmail1"><strong>Descripción del capitulo.</strong></label>
+                                <input type="text" name="descripcionCapitulo" #descripcionCapitulo="ngModel" [(ngModel)]="capitulo.descripcion" class="form-control" placeholder="Descripción capitulo">
+                                <small class="form-text text-muted">Descripción perteneciente al capitulo.</small>
+                                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-3">
+                                <label><strong>Unidad perteneciente.</strong></label>
+                                <select name="cars" class="form-control" name="unidadCapitulo" #unidadCapitulo="ngModel" [(ngModel)]="capitulo.unidad"  placeholder="Unidad capitulo" disabled="{{ loaderUnidad }}">
+                                        <option value="">Seleccione Unidad perteneciente</option>
+                                        <option value="{{ unidad.id }}" *ngFor="let unidad of unidades">
+                                                {{ unidad.nombre }}
+                                        </option>
+                                </select>
+                                <small class="form-text text-muted">Unidad perteneciente.</small>
+                                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
+                            </div>
+                            <div class="form-group col-md-3">
+                                <label for="file"><strong>Imagen del capitulo.</strong></label>
+                                <!--<input type="file" (change)="subeImg($event)" class="form-control-file" #fileInput accept=".xml" multiple="true">-->
+                                <input type="file" class="form-control" (change)="fileChange($event)" name="imagenCapitulo" #imagenCapitulo="ngModel" [(ngModel)]="capitulo.imagen" placeholder="Upload file capitulo">
+                                <small class="form-text text-muted">Imagen perteneciente al capitulo.</small>
+                            </div>
+
+                            <div class="form-group col-md-4">
+                                <label for="file"><strong>Suscripción.</strong></label>
+                                <select name="gender" class="form-control" [(ngModel)]="capitulo.suscripcion">
+                                    <option [value]="'0'" selected>Gratis</option>
+                                    <option [value]="'1'">Anual</option>
+                                    <option [value]="'2'">Intensivo</option>
+                                </select>
+                                <small class="form-text text-muted">Plan perteneciente.</small>
+                            </div>
+                            <div class="form-group col-md-2 align-self-end text-center">
+                                <button type="submit" class="btn btn-primary">Crear capitulo</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1"><strong>Descripción del capitulo.</strong></label>
-                <input type="text" name="descripcionCapitulo" #descripcionCapitulo="ngModel" [(ngModel)]="capitulo.descripcion" class="form-control" placeholder="Descripción capitulo">
-                <small class="form-text text-muted">Descripción perteneciente al capitulo.</small>
-                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
-            </div>
-            <div class="form-group">
-                <label><strong>Unidad perteneciente.</strong></label><br>
-                <select name="cars" class="form-control" name="unidadCapitulo" #unidadCapitulo="ngModel" [(ngModel)]="capitulo.unidad"  placeholder="Unidad capitulo" disabled="{{ loaderUnidad }}">
-                        <option value="">Seleccione Unidad perteneciente</option>
-                        <option value="{{ unidad.id }}" *ngFor="let unidad of unidades">
-                                {{ unidad.nombre }}
-                        </option>
-                </select>
-                <small class="form-text text-muted">Unidad perteneciente.</small>
-                <!--<span class="text-danger" *ngIf="!nombre.valid && nombre.touched">El nombre no es válido</span>-->
-            </div>
-            <div class="form-group">
-                <label for="file"><strong>Imagen del capitulo.</strong></label>
-                <!--<input type="file" (change)="subeImg($event)" class="form-control-file" #fileInput accept=".xml" multiple="true">-->
-                <input type="file" class="form-control" (change)="fileChange($event)" name="imagenCapitulo" #imagenCapitulo="ngModel" [(ngModel)]="capitulo.imagen" placeholder="Upload file capitulo">
-                <small class="form-text text-muted">Imagen perteneciente al capitulo.</small>
-            </div>
-
-            <div class="form-group">
-                <label for="file"><strong>Suscripción.</strong></label><br>
-                <select name="gender" class="form-control" [(ngModel)]="capitulo.suscripcion">
-                    <option [value]="'0'" selected>Gratis</option>
-                    <option [value]="'1'">Anual</option>
-                    <option [value]="'2'">Intensivo</option>
-                </select>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Crear capitulo</button>
-        </form>
-    </div>
-</div><br><hr>
-<div class="row">
-    <div class="col-md-12">
-        <h3>Capitulos creados:</h3>
-
-        <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Descripcion</th>
-                    <th scope="col">Accion</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let capitulo of capitulos">
-                    <th scope="row">1</th>
-                    <td>{{ capitulo.nombre }}</td>
-                    <td>{{ capitulo.descripcion }}</td>
-                    <td></td>
-                  </tr>
-
-                </tbody>
-              </table>
-
-
+        </div>
     </div>
 </div>
+    <!--<br><hr>
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Capitulos creados:</h3>
+
+            <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Descripcion</th>
+                        <th scope="col">Accion</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let capitulo of capitulos">
+                        <th scope="row">1</th>
+                        <td>{{ capitulo.nombre }}</td>
+                        <td>{{ capitulo.descripcion }}</td>
+                        <td></td>
+                    </tr>
+
+                    </tbody>
+                </table>
+
+
+        </div>
+    </div>-->
