--- a/src/app/components/revision/revision.component.html
+++ b/src/app/components/revision/revision.component.html
@@ -25,7 +25,7 @@
                     <div class="row">
                         <!-- ngFor -->
                         <div class="card animated animatedFadeInUp fadeInUp" style="width: 15.7rem; margin: 6px; padding: 5px;" *ngFor="let revision of revisiones">
-                            <a [routerLink]="['/revision/lista',revision.id]"><img src="http://localhost:8000/uploads/revisiones/{{ revision.imagen }}" class="card-img-top" alt="..."></a>
+                            <a [routerLink]="['/revision/lista',revision.id]"><img src="{{ url }}/uploads/revision/unidades/{{ revision.imagen }}" class="card-img-top" alt="..."></a>
                             <div class="card-body">
                                 <a [routerLink]="['/revision/lista',revision.id]" ><h5 class="card-title">{{ revision.nombre }}</h5></a>
                                 <p class="card-text">{{ revision.descripcion }}</p>
