--- a/src/app/components/revision/revisionlista.component.html
+++ b/src/app/components/revision/revisionlista.component.html
@@ -26,7 +26,7 @@
                     <div class="card animated animatedFadeInUp fadeInUp col-md-12" style="width: 15.7rem; margin: 6px; padding: 5px;">
                         <div class="list-group">
                             <button type="button" class="list-group-item list-group-item-action h3" *ngFor="let revision of revisionesLista" [routerLink]="['/revision/detalle/',lista,revision.id]">
-                                <i class="fas fa-clipboard"></i> {{ revision.descripcion }}
+                                <i class="fas fa-clipboard"></i> {{ revision.nombre }}
                             </button>
                         </div>
                     </div>
