--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8163,8 +8163,109 @@ body.md-skin {
     -webkit-animation-name: fadeInUp;
 }
 
+/*
+input[type="radio"] {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    border: 2px solid #1FBED6;
+    background-color: white;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+  
+  input[type="radio"]:focus { 
+    outline-color: transparent;
+  }
+  
+  input[type="radio"]:checked {
+    background-color: #1FBED6;
+  }
+  
+  input[type="radio"]:checked ~ span:first-of-type {
+    color: white;
+  }
+  
+  label span:first-of-type {
+    position: relative;
+    left: -27px;
+    font-size: 15px;
+    color: #1FBED6;
+  }
+  
+  label span {
+    position: relative;
+    top: -10px;
+  }
 
-label {display: block; padding: 5px; position: relative; } /*padding-left: 20px;*/
-label input {display: none;}
-label span {border: 1px solid #ccc; width: 23px; height: 22px; overflow: hidden; line-height: 1; text-align: center; border-radius: 100%; font-size: 12pt; left: 0; top: 50%; margin-top: -15.5px;}
-input:checked + span {background: #ccf; border-color: #ccf;}
+  */ /*
+  body {
+    vertical-align: top;
+    line-height: 26px;
+}
+label {
+    display: inline;
+}
+.radio-1 {
+    width: 193px;
+}
+.button-holder {
+    float: left;
+    margin-left: 6px;
+    margin-top: 16px;
+}
+.regular-radio {
+    display: none;
+}
+.regular-radio + label {
+    background-color: #fafafa;
+    border: 2px solid #cacece;
+    border-radius: 50px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 -15px 10px -12px rgba(0, 0, 0, 0.05) inset;
+    display: inline-block;
+    padding: 11px;
+    position: relative;
+
+}
+.regular-radio + label:before {
+    background: none repeat scroll 0 0 #FDFDFD;
+    border-radius: 50px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3) inset;
+    content: " ";
+    font-size: 36px;
+    height: 8px;
+    left: 7px;
+    position: absolute;
+    top: 7px;
+    width: 8px;
+}
+.regular-radio:checked + label:after {
+    background: none repeat scroll 0 0 #94E325;
+    border-radius: 50px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3) inset;
+    content: " ";
+    font-size: 36px;
+    height: 8px;
+    left: 7px;
+    position: absolute;
+    top: 7px;
+    width: 8px;
+}
+.regular-radio:checked + label {
+    background-color: #e9ecee;
+    border: 2px solid #adb8c0;
+    color: #99a1a7;
+    padding: 11px;
+}
+.regular-radio + label:active, .regular-radio:checked + label:active {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 1px 3px rgba(0, 0, 0, 0.1) inset;
+}
+*/
+
+labelVideo{
+     position: relative;
+     left: 13px;
+     top: -37px;
+     font-size: 12pt;
+     opacity: .5;
+ }
