--- a/src/app/components/revision/revisiondetalle.component.html
+++ b/src/app/components/revision/revisiondetalle.component.html
@@ -28,8 +28,8 @@
                                 <div class="col.md-12" style="font-size: 23px !important;">
                                     {{num.pregunta}}
                                 </div>
-                                <div  *ngFor="let alt of num.alternativas;" class="col-md-2">
-                                        
+                                <div  *ngFor="let alt of num.alternativas;" class="col-md-2 col-xs-2">
+                                    <div>
                                         <input  name="{{num.id}}" 
                                                 type="radio" 
                                                 [value]="alt" 
@@ -38,10 +38,11 @@
                                                 (change)="handleChange(i)" 
                                                 style="width: 3em;
                                                 height: 3em; cursor:pointer; "/>
-                                        <div class="col-md-12" style="margin-top: -35px;">{{ alt }}</div>
+                                                
+                                    </div>
+                                    <div class="col-md-12" style="margin-top: -33px;  font-size: 11px;">{{ alt }}</div>
                                                 <!--<label class="labelPreguntas"> 
-                                            </label>-->
-                                        
+                                            </label>-->                                       
                                 </div>
                                 <div *ngIf="showIcons[i]" class="col-md-12" style="margin-top: 10px;margin-left: 20px;">
                                     <i class="fas fa-check text-success" style="font-size: 20px;" *ngIf=" num.correcta === true "></i>
