--- a/src/app/components/nav-p/nav-p-admin.component.html
+++ b/src/app/components/nav-p/nav-p-admin.component.html
@@ -27,6 +27,17 @@
                         <a class="dropdown-item" [routerLink]="['/admin/revision']">Revisión</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" [routerLink]="" routerLinkActive="active" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Material
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" [routerLink]="['/admin/material/unidad']">Unidades</a>
+                        <a class="dropdown-item" [routerLink]="['/admin/material/capitulo']">Capitulos</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" [routerLink]="['/admin/material/material']">Material</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </nav>
