--- a/src/app/components/nav-p/nav-p.component.html
+++ b/src/app/components/nav-p/nav-p.component.html
@@ -34,6 +34,11 @@
                         <i class="fas fa-clipboard"></i> Revisión
                     </a>   
                 </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/material/unidad']" routerLinkActive="active" class="nav-link">
+                        <i class="fas fa-book-open"></i> Material
+                    </a>   
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto" *ngIf="identity != null" style="margin-right: 10%;">
                 <!--<li class="nav-item">
